service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dep
  name: dep
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: dep
  type: LoadBalancer
status:
  loadBalancer: {}
