svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: live-app-dep
  name: live-app-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: live-app-dep
  type: ClusterIP
