ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:<account_id>:certificate/<certificate_id>
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: app.sujitramdhakal.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: live-app-svc
                port:
                  number: 80
